add new shortcut icon and polish up first prototype

--- a/static/index.html
+++ b/static/index.html
@@ -5,11 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="shortcut icon" href="https://cdn.shopify.com/s/files/1/2609/7284/articles/942px-us-presidential-flag-1945_1934d243-3aef-46db-9fa4-e5585ca4fad1_300x300.png?v=1517213630">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script|PT+Sans+Narrow|Pacifico|Permanent+Marker|Patua+One|Sedgwick+Ave+Display"
     rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
-  <title>Cake Site</title>
+  <title>PRESIDENTIAL CAKES</title>
 </head>
 
 <body>
